# metamatch

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md  README.tpl  rustfmt.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml
debug/: Cargo.toml
debug/src/: .gitignore  main.rs
playground/: Cargo.toml
playground/src/: lib.rs  main.rs
playground/tests/: mod.rs
src/: ast.rs  evaluate.rs  implementation.rs  lib.rs  macro_impls.rs  parse.rs  token_sink.rs
tests/: builtins.rs  expressions.rs  metamatch.rs  mod.rs
tests/integration/: builtin_functions.rs  eval.rs  metamatch.rs  mod.rs  replicate.rs  template.rs
tests/ui/: arg_missmatch.rs  arg_missmatch.stderr  break_out_of_loop_with_output_tokens.rs  break_out_of_loop_with_output_tokens.stderr  else_if_missing_if.rs  else_if_missing_if.stderr  eval_tag_not_in_template.stderr  expr_in_expand_list.stderr  extern_must_be_top_level.rs  extern_must_be_top_level.stderr  fn_decl_in_parentheses.rs  fn_decl_in_parentheses.stderr  invalid_ident.rs  invalid_ident.stderr  let_decl_in_parentheses copy.rs  let_decl_in_parentheses copy.stderr  quote_not_in_unquote.rs  quote_not_in_unquote.stderr  redundant_template_tag.rs  redundant_template_tag.stderr  string_not_indexable.rs  string_not_indexable.stderr  string_not_iterable.rs  string_not_iterable.stderr  template_tag_in_eval_mode.stderr  unquote_not_in_quote.rs  unquote_not_in_quote.stderr
tests/ui/basic/: add_assign_type_error.rs  add_assign_type_error.stderr  add_function_to_int.rs  add_function_to_int.stderr  assert_eq_fail.rs  assert_eq_fail.stderr  assert_eq_message.rs  assert_eq_message.stderr  assert_fail.rs  assert_fail.stderr  assert_message.rs  assert_message.stderr  assign_out_of_bounds.rs  assign_out_of_bounds.stderr  assign_to_immutable.rs  assign_to_immutable.stderr  bytes_on_list.rs  bytes_on_list.stderr  call_before_declare.rs  call_before_declare.stderr  call_non_function.rs  call_non_function.stderr  compare_different_types.rs  compare_different_types.stderr  destructure_then_mutate.rs  destructure_then_mutate.stderr  divide_by_zero.rs  divide_by_zero.stderr  enumerate_on_int.rs  enumerate_on_int.stderr  format_specifier_not_supported.rs  format_specifier_not_supported.stderr  ident_invalid_string.rs  ident_invalid_string.stderr  index_non_list.rs  index_non_list.stderr  index_out_of_bounds.rs  index_out_of_bounds.stderr  iterate_non_iterable.rs  iterate_non_iterable.stderr  (+48 more)
tests/ui/edge_cases/: arg_missmatch.stderr  break_out_of_loop_with_output_tokens.stderr  chained_method_error.rs  chained_method_error.stderr  else_if_missing_if.rs  else_if_missing_if.stderr  expr_in_expand_list.rs  expr_in_expand_list.stderr  extern_must_be_top_level.stderr  invalid_ident.rs  (+13 more)
(+21 files in other folders)
