[package]
name = "metamatch"

version = "0.1.0"
edition = "2021"
rust-version = "1.65.0" # due to let .. else statements

authors = ["Christian Schwarz <cmrs@cmrs.io>"]
license = "MIT"

readme = "README.md"
repository = "https://github.com/cmrschwarz/metamatch"

description = """
A rust proc-macro for generating repetitive match arms.
"""
categories = ["development-tools", "no-std", "no-std::no-alloc"]
keywords = ["match", "macro", "generator", "boilerplate", "repetition"]


[dependencies]

[dev-dependencies]
paste = "1.0.15"

[lib]
proc-macro = true
test = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
