[workspace]
members = ["debug"]

[package]
name = "metamatch"

version = "0.2.4"
edition = "2021"

# needed for let .. else
# remember to update in ci when bumping this
rust-version = "1.65.0"

authors = ["Christian Schwarz <cmrs@cmrs.io>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/cmrschwarz/metamatch"
documentation = "https://docs.rs/metamatch"

description = """
A proc-macro for generating repetitive match arms.
"""
categories = ["development-tools", "no-std", "no-std::no-alloc"]
keywords = ["match", "macro", "generator", "boilerplate", "repetition"]


[dependencies]
# None!

[dev-dependencies]
paste = "1.0.15"
trybuild = "1.0.90"

[lib]
proc-macro = true
test = false


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--sort-modules-by-appearance"]
