[workspace]
members = ["playground"]

[package]
name = "metamatch"

version = "0.3.0"
edition = "2021"

# 1.70 is needed for trybuild
rust-version = "1.70.0"

authors = ["Christian Schwarz <cmrs@cmrs.io>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/cmrschwarz/metamatch"
documentation = "https://docs.rs/metamatch"

description = """
A proc-macro for generating repetitive match arms.
"""
categories = ["development-tools", "no-std", "no-std::no-alloc"]
keywords = ["match", "macro", "generator", "boilerplate", "repetition"]


[dependencies]
# None!

[dev-dependencies]
trybuild = "1.0.114"

[lib]
proc-macro = true
test = false


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--sort-modules-by-appearance"]
